--- a/TT2024-A155/TT2024-A155.csproj
+++ b/TT2024-A155/TT2024-A155.csproj
@@ -34,6 +34,7 @@
     <PackageReference Include="itext7.bouncy-castle-fips-adapter" Version="8.0.2" />
     <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="MimeKit" Version="4.3.0" />
+    <PackageReference Include="QRCoder" Version="1.4.3" />
     <PackageReference Include="SpreadsheetLight" Version="3.5.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
