--- a/TT2024-A155/App.config
+++ b/TT2024-A155/App.config
@@ -8,7 +8,7 @@
     <userSettings>
         <TT2024_A155.Properties.Settings>
             <setting name="SecretMessage" serializeAs="String">
-                <value>Data Source=localhost\SQLEXPRESS;Initial Catalog=TTA155;Integrated Security=True</value>
+                <value>Data Source=TT2024-A155.mssql.somee.com;Initial Catalog=TT2024-A155;User Id=tt2024a155_SQLLogin_1;Password=4fr979kv7w</value>
             </setting>
         </TT2024_A155.Properties.Settings>
     </userSettings>
